// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there are no user 1`] = `
<div
  className="container"
>
  <img
    alt=""
    className="imageContainer"
    src="avatar.png"
  />
  <div
    className="contentContainer"
  >
    <div
      className="contentContainerRow1"
    >
      <div
        className="name"
      >
        name: 
        
      </div>
      <button
        onClick={[Function]}
      >
        Follow
      </button>
    </div>
    <div
      className="contentContainerRow2"
    >
      <div
        className="date"
      >
        date: 
        
      </div>
      <div
        className="time"
      >
        reading time: 
        
      </div>
      <input
        checked={false}
        className="hvrIconPop"
        onChange={[Function]}
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`renders correctly when there is one user 1`] = `
<div
  className="container"
>
  <img
    alt="Walton Morton"
    className="imageContainer"
    src="avatar.png"
  />
  <div
    className="contentContainer"
  >
    <div
      className="contentContainerRow1"
    >
      <div
        className="name"
      >
        name: 
        Walton Morton
      </div>
      <button
        onClick={[Function]}
      >
        Unfollow
      </button>
    </div>
    <div
      className="contentContainerRow2"
    >
      <div
        className="date"
      >
        date: 
        Aug 9
      </div>
      <div
        className="time"
      >
        reading time: 
        20
      </div>
      <input
        checked={false}
        className="hvrIconPop"
        onChange={[Function]}
        type="checkbox"
      />
    </div>
  </div>
</div>
`;
